[package]
rust-version = "1.58.1"
name = "mdns"
version = "5.2.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2021"

description = """
A multicast DNS client library.

Supports discovery of any mDNS device on a LAN.
"""

license = "MIT"
documentation = "https://docs.rs/mdns"
repository = "https://github.com/dylanmckay/mdns"

categories = ["network-programming"]
keywords = ["mdns", "dns", "multicast", "chromecast", "discovery"]

[features]
default = ["runtime-tokio", "with-serde", "multihome"]
runtime-async-std = ["async-std"]
runtime-tokio = ["tokio", "tokio-stream"]
with-serde = ["serde"]
multihome = ["multicast-socket"]

[dependencies]
async-std = { optional = true, version = "1.6.2", features = [
    "unstable",
    "attributes",
] }
async-stream = "0.3"
async-trait = "0.1"
bstr = "1.8"
dns-parser = "0.8.0"
err-derive = "0.3"
futures-core = "0.3.1"
futures-util = "0.3.1"
log = "0.4"
serde = { optional = true, version = "1", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"] }
tokio = { optional = true, version = "1.8", features = [
    "time",
    "net",
    "rt-multi-thread",
    "macros",
] }
tokio-stream = { optional = true, version = "0.1.8", features = ["time"] }
unicase = "2.6.0"

[dependencies.multicast-socket]
optional = true
version = "0.5.0"
git = "https://github.com/PhysicalGraph/multicast-socket"
branch = "feat/tokio-async-socket"
default-features = false
features = ["tokio"]
